Tags and Endpoint added
